--- a/configs/e2e_mask_rcnn_R_50_FPN_1x.yaml
+++ b/configs/e2e_mask_rcnn_R_50_FPN_1x.yaml
@@ -29,7 +29,7 @@ MODEL:
     SHARE_BOX_FEATURE_EXTRACTOR: False
   MASK_ON: True
 DATASETS:
-  TRAIN: ("coco_2014_train")
+  TRAIN: ("coco_2014_train",)
   TEST: ("coco_2014_val",)
 DATALOADER:
   SIZE_DIVISIBILITY: 32
