--- a/configs/e2e_mask_rcnn_R_50_FPN_1x0.yaml
+++ b/configs/e2e_mask_rcnn_R_50_FPN_1x0.yaml
@@ -35,6 +35,7 @@ DATALOADER:
   SIZE_DIVISIBILITY: 32
 SOLVER:
   BASE_LR: 0.02
+  CHECKPOINT_PERIOD: 1000
   WEIGHT_DECAY: 0.0001
   STEPS: (6000, 8000)
-  MAX_ITER: 90000
+  MAX_ITER: 9000
