--- a/configs/e2e_mask_rcnn_R_50_FPN_1x0.yaml
+++ b/configs/e2e_mask_rcnn_R_50_FPN_1x0.yaml
@@ -17,6 +17,7 @@ MODEL:
     POOLER_RESOLUTION: 7
     POOLER_SCALES: (0.25, 0.125, 0.0625, 0.03125)
     POOLER_SAMPLING_RATIO: 2
+    NUM_CLASSES: 1
     FEATURE_EXTRACTOR: "FPN2MLPFeatureExtractor"
     PREDICTOR: "FPNPredictor"
   ROI_MASK_HEAD:
